--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ h1 {
 }
 p {
     font-size: 1.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1.4em;
     color: #333;
 }
@@ -36,6 +37,7 @@ footer {
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 
 ul.posts li {
