--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,13 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
+			<meta name="description" content="The personal site of Louie Terrill">
+			<meta property="og:title" content="The personal site of Louie Terrill" />
+ 		 	<meta property="og:type" content="article" />
+  			<meta property="og:url" content="https://www.louieterrill.github.io/" />
+  			<meta property="og:image" content="" />
+  			<meta property="og:description" content="The personal site of Louie Terrill" />
+  			<meta property="og:site_name" content="The personal site of Louie Terrill" />
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
