--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,13 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+td {    
+    display: block;
+    float: left;
+    padding: 10px 0;
+    margin-right:50px;
+    background: white;
+}
+td:last-child {
+    margin-right: 0;
+}
